# dec25bmlops_int_weather

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  API.md  Dockerfile  Dockerfile.dev  Dockerfile.jenkins  Dockerfile.mlflow  Jenkinsfile  LICENSE  Makefile  Projectplan.md  README.md  bentofile.yaml  build_output.txt  data.dvc  data.dvc.backup  docker-compose.jenkins.yml  docker-compose.yml  dvc.yaml  grafana-dashboards.yml  grafana-datasources.yml  nginx.conf  params.yaml  prometheus.yml  promtail-config.yml  pyproject.toml  pytest_output.txt  repro_log.txt  requirements.txt  tempo.yml  verify_bento.py
.dvc/: !config.local  .gitignore  config
.github/workflows/: ci.yaml  ci.yml  python-app.yml  release.yaml  release.yml  retrain.yaml  smoke_test.yaml
artifacts/: metrics.json
dags/: data_update_dag.py  retrain_dag.py
dags/utils/: slack.py
data/: .gitignore
data/raw/: weatherAUS.csv.dvc
docs/: 00_index.md  01_branch_summary.md  02_architecture.md  03_data.md  04_training_and_experiments.md  05_evaluation.md  06_packaging_and_deployment.md  07_ci_cd_quality.md  08_monitoring_and_ops.md  09_exam_talk_track.md  10_api_reference.md  12_troubleshooting.md
grafana/dashboards/: mlops-drift.json  mlops-inference.json  mlops-infra.json  mlops-overview.json  mlops-pipeline.json
src/: service.py
src/api/: main.py
src/auth/: jwt_auth.py
src/config/: __init__.py
src/data/: fetch_weather_data.py  load_to_db.py  preprocess.py  training_data_splits_by_year.py  validate_data.py
tests/: test_predict.py  test_security_verification.py
(+8 files in other folders)
