[project]
name = "weather-au-mlops"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy<2.0.0",
    "pandas==2.2.2",
    "scikit-learn==1.5.1",
    "scipy==1.14.1",
    "xgboost==2.1.1",
    "lightgbm==4.5.0",
    "imbalanced-learn==0.12.3",
    "mlflow==2.15.1",
    "wandb==0.17.7",
    "dvc==3.53.2",
    "dvc-s3==3.2.0",
    "pathspec<0.12.0",
    "fastapi==0.112.2",
    "uvicorn==0.30.6",
    "ruff==0.6.3",
    "pytest==8.3.2",
    "pre-commit==3.8.0",
    "httpx==0.27.0",
    "python-dotenv==1.0.1",
    "pymongo==4.6.1",
    "requests==2.32.3",
    "bentoml==1.4.33",
    "pyjwt==2.9.0",
    "protobuf<5.0.0",
    "evidently==0.4.24",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
